--- a/src/components/LandingPage.scss
+++ b/src/components/LandingPage.scss
@@ -1,7 +1,7 @@
 .sidebar {
   width: 250px;
-  background: #c4bdbd;
-  color: #ffffff;
+  background: #0e0e0e;
+  color: #090909;
   display: flex;
   flex-direction: column;
   padding: 20px;
